[package]
name = "matchtop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
bounded-vec-deque = "0.1.1"
clap = { version = "4.3.19", features = ["derive"]}
lazy_static = "1.4.0"
regex = "1.9.3"
